test/libsolidity/syntaxTests/contractBaseLocation/layout_statement_without_at.sol
contract C layout { }
// ----
// ParserError 1994: (18-19): 'layout' should be followed by 'at <storage-base-expression>'.
// ParserError 6933: (20-21): Expected primary expression.
